# mlx-speechd

./: .gitignore  README.md  pyproject.toml
src/mlx_speechd/: __init__.py  audio.py  cli.py  constants.py  daemon.py  engine.py  models.py  normalize.py  paths.py  playback.py  protocol.py
tests/: test_audio.py  test_cli.py  test_daemon_idle_and_queue.py  test_daemon_integration.py  test_no_forbidden_scaffolding.py  test_normalize.py  test_playback.py  test_protocol.py
