[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mlx-speechd"
version = "0.1.0"
description = "Manual-session MLX-Audio CustomVoice speech daemon"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "rPio" }]
dependencies = [
  "mlx-audio @ git+https://github.com/Blaizzy/mlx-audio.git",
  "numpy>=2.0",
  "sounddevice>=0.5",
  "soundfile>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-timeout>=2.3",
]

[project.scripts]
msd = "mlx_speechd.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mlx_speechd"]

[tool.hatch.metadata]
allow-direct-references = true
